[gd_scene load_steps=3 format=3 uid="uid://c1ytgs7iese5"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pllta"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50an7"]
bg_color = Color(0.101961, 0.0941176, 0.223529, 0.784314)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0745098, 0.203922, 0.313726, 0.784314)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[node name="PauseMenuOverlay" type="CanvasLayer"]
process_mode = 3
layer = 110
script = ExtResource("1_pllta")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -110.5
offset_right = 123.5
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_50an7")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "PAUSED"
horizontal_alignment = 1

[node name="Button" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="HSeparator" type="HSeparator" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleMenuButton" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit To Title Menu"

[node name="HSeparator2" type="HSeparator" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume" type="HSlider" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 30.0
value = 30.0

[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/TitleMenuButton" to="." method="_on_title_menu_button_pressed"]
[connection signal="value_changed" from="PauseMenu/PanelContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
